--- a/config.yaml
+++ b/config.yaml
@@ -22,18 +22,22 @@ md_wechat_path: './docs/wechat.md'
 
 # keywords to search
 keywords:
-    "SLAM": 
-        filters: ["SLAM", "Visual Odometry"]
-    "SFM":
-        filters: ["SFM", "Structure from Motion"]
-    "Visual Localization":
-        filters: ["Visual Localization","Camera Localization",
-                  "Camera Re-localisation","Loop Closure Detection",
-                  "visual place recognition","image retrieval"]
-    "Keypoint Detection":
-        filters: ["Keypoint Detection", "Feature Descriptor"]
-    "Image Matching":
-        filters: ["Image Matching", "Keypoint Matching", 
-                  "Line Segment Detection", "Local Feature Matching"]
-    "NeRF":
-        filters: ["NeRF"]
+    "VISUAL QUESTION ANSWERING":
+        filters: ["VQA", "visual question answering"]
+    "CAUSAL":
+        filters: ["causal", "causality", "intervention", "counterfactual"]
+    # "SLAM": 
+    #     filters: ["SLAM", "Visual Odometry"]
+    # "SFM":
+    #     filters: ["SFM", "Structure from Motion"]
+    # "Visual Localization":
+    #     filters: ["Visual Localization","Camera Localization",
+    #               "Camera Re-localisation","Loop Closure Detection",
+    #               "visual place recognition","image retrieval"]
+    # "Keypoint Detection":
+    #     filters: ["Keypoint Detection", "Feature Descriptor"]
+    # "Image Matching":
+    #     filters: ["Image Matching", "Keypoint Matching", 
+    #               "Line Segment Detection", "Local Feature Matching"]
+    # "NeRF":
+    #     filters: ["NeRF"]
