--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 # TODO: add papers by configuration file
 base_url: "https://arxiv.paperswithcode.com/api/v0/papers/"
-user_name: "Vincentqyw"
+user_name: "zhaoyiz0606"
 repo_name: "cv-arxiv-daily"
 show_authors: True
 show_links: True
@@ -26,6 +26,8 @@ keywords:
         filters: ["VQA", "visual question answering"]
     "CAUSAL":
         filters: ["causal", "causality", "intervention", "counterfactual"]
+    "TUNING&ADAPTER":
+        filters: ["tuning", "adapter", "prompt"]
     # "SLAM": 
     #     filters: ["SLAM", "Visual Odometry"]
     # "SFM":
